...
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- 功能列表 -->
    <ListView
        android:id="@+id/optionsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:entries="@array/my_options" />
...
